--- a/sources/standard/document.adoc
+++ b/sources/standard/document.adoc
@@ -1,11 +1,28 @@
-= Title
-Metadata goes here
+= Sample document: Rice
+:technical-committee: Food products
+:fullname: Tina Luedtke
+:doctype: standard
+:language: en
+:created-date: 2021-07-12
+:copyright-year: 2021
+:edition: 1
+:status: draft
+:draft:
 
-
-include::sections/00_foreword.adoc[]
-include::sections/01_introduction.adoc[]
-include::sections/03_terms_definitions.adoc[]
-include::sections/04_content_section.adoc[]
-include::sections/a1_annex.adoc[]
-include::sections/a2_annex.adoc[]
-include::sections/b0_bibliography.adoc[]
+include::sections/00-foreword.adoc[]
+include::sections/00-introduction.adoc[]
+include::sections/01-scope.adoc[]
+include::sections/02-normref.adoc[]
+include::sections/03-termdef.adoc[]
+include::sections/04-specifications.adoc[]
+include::sections/05-sampling.adoc[]
+include::sections/06-testmethods.adoc[]
+include::sections/07-testreport.adoc[]
+include::sections/08-packaging.adoc[]
+include::sections/09-marking.adoc[]
+include::sections/aa-annex-a.adoc[]
+include::sections/ab-annex-b.adoc[]
+include::sections/ac-annex-c.adoc[]
+include::sections/ad-annex-d.adoc[]
+include::sections/ae-annex-e.adoc[]
+include::sections/b0-bibliography.adoc[]
